--- a/views/extract_mac_frames.pug
+++ b/views/extract_mac_frames.pug
@@ -4,5 +4,5 @@ block content
   h1 
     center.
       | Welcome to #{title}
-    P
-      | Select an entry from the side bar
+    p
+      | #{help}
