--- a/views/extract_she_args_packets.pug
+++ b/views/extract_she_args_packets.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 
-    center.
+    center
       | Welcome to #{title}
-    P
-      | Select an entry from the side bar
+    p
+      | #{help}
