--- a/views/list_log_file.pug
+++ b/views/list_log_file.pug
@@ -2,7 +2,5 @@ extends layout
 
 block content
   h1 
-    center.
+    center
       | Welcome to #{title}
-    P
-      | Select an entry from the side bar
