--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,13 +15,13 @@ html(lang="fr")
       script(type="text/javascript", src='/javascripts/datepicker-fr.js')
   body
     table(width="100%")
-      tr
+      tr(style="background-image: url('/images/autosar-embedded-software-feature-640x360_tcm55-109255.jpg'); background-repeat: no-repeat;")
         td(colspan="2", class="block-header")
           block header
             h1
               center.
                 MAC Provisionning
-      tr
+      tr(style="background-image: url('/images/futuristic-technological-wallpaper_79603-1092.png'); background-repeat: no-repeat;")
         td(width="500px", class="content")
           table(width="500px", class="block-sidebar")
             tr
