--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
   h1 
-    center.
+    center
       | Welcome to #{title}
-    P
+  font(size="3px")
+    p
       | Select an entry from the side bar
