--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -3,7 +3,11 @@ extends layout
 block content
   h1 
     center
-      | Welcome to #{title}
+      | #{title}
   font(size="3px")
     p
       | #{help}
+  p
+    | #{content}
+
+      
