--- a/views/upload_log_files.pug
+++ b/views/upload_log_files.pug
@@ -3,4 +3,9 @@ extends layout
 block content
   h1 
     center
-      | Welcome to #{title}
+      | #{title}
+  font(size="3px")
+    p
+      | #{help}
+  p
+    | #{content}
