--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html(lang="fr")
         td(width="400px", colspan="2", class="block-header")
           block header
             h1
-              center.
+              center
                 MAC Provisionning
       tr(style="background-image: url('/images/futuristic.png'); background-repeat: no-repeat; background-size: 100%;")
         td(class="content")
