--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -10,44 +10,54 @@ block content
   p
     font(size="3px")
       div
-        table(id="log_file_tbl", width="100%")
+        table(id="log_files_tbl", width="100%")
           tr
-            th(id="Name")
-              Name
-            th(id="LogDate")
-              Log Date
-            th(id="Import Date")
-              Import Date
-            th(id="Version")
-              Version
-            th(id="UUID")
-              UUID
-            th(id="Size")
-              Size
+            th(id="Name", style="background-color: #000")
+              | Name
+            th(id="LogDate", style="background-color: #000")
+              | Log Date
+            th(id="Import Date", style="background-color: #000")
+              | Import Date
+            th(id="Version", style="background-color: #000")
+              | Version
+            th(id="Size", style="background-color: #000")
+              | Size
+            th(id="LinesNb", style="background-color: #000")
+              | Lines Nb
+            th(id="UUID", style="background-color: #000")
+              | UUID
+            th(id="FramesExtracted", style="background-color: #000")
+              | FramesExtracted
   script(type="text/javascript")
-    | var logFilesTbl = document.getElementById('log_file_tbl');
-    | alert(log_files_tbl.length-1);
+    | var log_files_tbl = #{logfiles};
+    | alert(log_files_tbl.length);
+    | var logFilesTbl = document.getElementById('log_files_tbl');
     | for (var i = log_files_tbl.length-1; i >= 0; i--)
     | {
-    |   alert(2);
-    |   var newRow = logFilesTbl.insertRow(0); /* Add */
-    |   // Column Name of the log file
+    |   var newRow = logFilesTbl.insertRow(1); /* Add  a row for this log file */
+    |   // Add a column for the Name of the log file
     |   var newCell = newRow.insertCell(0);
-    |   newCell.innerHTML = log_files_tbl[i][0];
-    |   // Column LogDate of the log file
+    |   newCell.innerHTML = log_files_tbl[i]['Name'];
+    |   // Add a column for the LogDate of the log file
     |   newCell = newRow.insertCell(1);
-    |   newCell.innerHTML = log_files_tbl[i][1];
-    |   // Column ImportDate of the log file
+    |   newCell.innerHTML = log_files_tbl[i]['LogDate'];
+    |   // Add a column for the ImportDate of the log file
     |   newCell = newRow.insertCell(2);
-    |   newCell.innerHTML = log_files_tbl[i][2];
-    |   // Column UUID of the log file
+    |   newCell.innerHTML = log_files_tbl[i]['ImportDate'];
+    |   // Add a column for the Version of the log file
     |   newCell = newRow.insertCell(3);
-    |   newCell.innerHTML = log_files_tbl[i][3];
-    |   // Column Size of the log file
+    |   newCell.innerHTML = log_files_tbl[i]['Version'];
+    |   // Add a column for the Size of the log file
     |   newCell = newRow.insertCell(4);
-    |   newCell.innerHTML = log_files_tbl[i][4];
-    |   // Column FramesExtracted of the log file
+    |   newCell.innerHTML = log_files_tbl[i]['Size'];
+    |   // Add a column for the LinesNb of the log file
     |   newCell = newRow.insertCell(5);
-    |   newCell.innerHTML = log_files_tbl[i][5];
+    |   newCell.innerHTML = log_files_tbl[i]['LinesNb'];
+    |   // Add a column for the UUID of the log file
+    |   newCell = newRow.insertCell(6);
+    |   newCell.innerHTML = log_files_tbl[i]['UUID'];
+    |   // Add a column for the FramesExtracted of the log file
+    |   newCell = newRow.insertCell(7);
+    |   newCell.innerHTML = '<input type="checkbox" onclick="this.checked=!this.checked;" readonly'+(log_files_tbl[i]['FramesExtracted'] ? ' checked' : '')+'>&nbsp;</input>';
     | }
 
