--- a/views/extract_mac_frames.pug
+++ b/views/extract_mac_frames.pug
@@ -1,9 +1,48 @@
 extends layout
 
+block scripts
+      script(type="text/javascript", src='/javascripts/jquery.js')
+      script(type="text/javascript", src='/javascripts/jquery-ui.js')
+      script(type="text/javascript", src='/javascripts/datepicker-fr.js')
 block content
   h1 
-    center.
+    center
       | Welcome to #{title}
   font(size="3px")
     p
       | #{help}
+  p
+    div
+      form(ref="logfile", id="logfile", method="post", action="/process_log_file_mac_prov/", encType="multipart/form-data")
+        table(width="100%")
+          tr
+            td(align="right", width="50px")
+              label(class='labelform').
+                Log file:
+            td
+              label(for="logFileSelect")
+                | Select a file to process
+              select(name="logFile", id="LogFileSelect")
+                option(value="")
+                  | -- Please select a log file --
+          tr
+            td(width="20%")
+              center
+                input(type="submit", title="Select the log file to process for extracting MAC prov frames ...", value="Select this log file")
+            td
+              center
+                input(type="button", title="Cancel the processing ...", value="Cancel", onclick="$('#logfile').trigger('reset');")
+  script(type="text/javascript")
+    | var log_file_tbl = #{logfiles};
+    | alert(log_file_tbl.length);
+    | var select = document.getElementById('logFileSelect');
+    | for (var ix = 0; ix < log_file_tbl.length; ix++)
+    | {
+    |   alert(log_file_tbl[ix]['Name'] + "(" + log_file_tbl[ix]['UUID'] + ")");
+    |   var opt = document.createElement('option');
+    |   opt.value = aLogFile[Name];
+    |   opt.innerHTML = aLogFile[Name] + '(' + aLogFile[UUID] + ')';
+    |   alert(opt.innerHTML);
+    |   select.appendChild(opt);
+    | }
+  script(type="text/javascript", src='/javascripts/tooltip.js')
