--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,16 +14,16 @@ html(lang="fr")
       script(type="text/javascript", src='/javascripts/jquery-ui.js')
       script(type="text/javascript", src='/javascripts/datepicker-fr.js')
   body(style="background-color: #22A" onLoad="localOnLoad();")
-    table(height="100%")
+    table(width="100%", height="100%")
       tr(style="background-image: url('/images/autosar-embedded.jpg'); ")
-        td(width="400px", colspan="2", class="block-header")
+        td(colspan="2", class="block-header")
           block header
             h1
               center
                 MAC Provisionning
       tr(style="background-image: url('/images/futuristic.png'); background-repeat: no-repeat; background-size: 100%;")
-        td(class="content")
-          table(class="block-sidebar")
+        td(width="350px", class="content")
+          table(class="block-sidebar", width="100%")
             tr
               td(style="vertical-align: bottom", class="block-sidebar")
                 p.
