--- a/views/import_log_file.pug
+++ b/views/import_log_file.pug
@@ -25,3 +25,5 @@ block content
           td
             input(type="button", title="Cancel the file upload ...", class="rapr-button", value="Annulation", onclick="$('#releve').trigger('reset');")
   script(type="text/javascript", src='/javascripts/tooltip.js')
+  script(type="text/javascript")
+    | function localOnLoad() {}
