--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,5 @@ block content
   p
     font(size="3px")
       | Select an entry from the side bar
+  script(type="text/javascript")
+    | function localOnLoad() {}
