--- a/views/extract_mac_frames.pug
+++ b/views/extract_mac_frames.pug
@@ -27,3 +27,5 @@ block content
   script(type="text/javascript", src='/javascripts/tooltip.js')
   script(type="text/javascript")
     | document.getElementById('result_log').value = "#{result_log}";
+  script(type="text/javascript")
+    | function localOnLoad() {}
