--- a/views/upload_log_files.pug
+++ b/views/upload_log_files.pug
@@ -10,4 +10,10 @@ block content
   p
     | #{content}
   script(type="text/javascript")
-    | function localOnLoad() {}
+  script(type="text/javascript")
+    | var active_keys = #{activeKeys};
+    | function localOnLoad() 
+    | {
+    |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
+    |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
+    | }
