--- a/views/extract_mac_frames.pug
+++ b/views/extract_mac_frames.pug
@@ -28,4 +28,9 @@ block content
   script(type="text/javascript")
     | document.getElementById('result_log').value = "#{result_log}";
   script(type="text/javascript")
-    | function localOnLoad() {}
+    | var active_keys = #{activeKeys};
+    | function localOnLoad() 
+    | {
+    |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
+    |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
+    | }
