--- a/views/list_mac_prov_frame.pug
+++ b/views/list_mac_prov_frame.pug
@@ -19,27 +19,30 @@ block content
             th(id="SHECmdExtracted", style="background-color: #000")
               | SHE Cmd Extracted
   script(type="text/javascript")
-    | function localOnLoad() {}
-  script(type="text/javascript")
-    | var mac_prov_frame_tbl = [#{macprovframes}];
-    | alert(mac_prov_frame_tbl.length);
-    | var macProvFramesTbl = document.getElementById('mac_prov_frame_tbl');
-    | for (var i = mac_prov_frame_tbl.length-1; i >= 0; i--)
+    | var active_keys = #{activeKeys};
+    | var mac_prov_frame_tbl = #{macprovframes};
+    | function localOnLoad() 
     | {
-    |   var newRow = macProvFramesTbl.insertRow(1); /* Add  a row for this log file */
-    |   // Add a column for the Name of the frame's log file
-    |   var newCell = newRow.insertCell(0);
-    |   newCell.innerHTML = mac_prov_frame_tbl[i]['name'];
-    |   // Add a column for the Payload of the frame
-    |   newCell = newRow.insertCell(1);
-    |   // Create a link
-    |   var link = document.createElement("a");
-    |   var href = document.createAttribute("href");
-    |   href.value = '/list_she_args_packets/' + mac_prov_frame_tbl[i]['id'];
-    |   link.setAttributeNode(href);
-    |   link.innerHTML = log_files_tbl[i]['frame'];
-    |   newCell.innerHTML = link.outerHTML;
-    |   // Add a column for the FramesExtracted of the log file
-    |   newCell = newRow.insertCell(2);
-    |   newCell.innerHTML = '<input type="checkbox" onclick="this.checked=!this.checked;" readonly'+(mac_prov_frame_tbl[i]['sheCmdExtracted'] ? ' checked' : '')+'>&nbsp;</input>';
+    |   var macProvFramesTbl = document.getElementById('mac_prov_frame_tbl');
+    |   for (var i = mac_prov_frame_tbl.length-1; i >= 0; i--)
+    |   {
+    |     var newRow = macProvFramesTbl.insertRow(1); /* Add  a row for this frame */
+    |     // Add a column for the Name of the frame's log file
+    |     var newCell = newRow.insertCell(0);
+    |     newCell.innerHTML = mac_prov_frame_tbl[i]['name'];
+    |     // Add a column for the Payload of the frame
+    |     newCell = newRow.insertCell(1);
+    |     // Create a link
+    |     var link = document.createElement("a");
+    |     var href = document.createAttribute("href");
+    |     href.value = (mac_prov_frame_tbl[i]['sheCmdExtracted'] ? '/list_she_args_packets/' : '/extract_she_args_packets/') + mac_prov_frame_tbl[i]['id'];
+    |     link.setAttributeNode(href);
+    |     link.innerHTML = mac_prov_frame_tbl[i]['frame'];
+    |     newCell.innerHTML = link.outerHTML;
+    |     // Add a column for the FramesExtracted of the frame file
+    |     newCell = newRow.insertCell(2);
+    |     newCell.innerHTML = '<input type="checkbox" onclick="this.checked=!this.checked;" readonly'+(mac_prov_frame_tbl[i]['sheCmdExtracted'] ? ' checked' : '')+'>&nbsp;</input>';
+    |   }
+    |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
+    |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
     | }
