--- a/views/error.pug
+++ b/views/error.pug
@@ -5,4 +5,9 @@ block content
   h2= error.status
   pre #{error.stack}
   script(type="text/javascript")
-    | function localOnLoad() {}
+    | var active_keys = #{activeKeys};
+    | function localOnLoad() 
+    | {
+    |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
+    |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
+    | }
