--- a/views/calc_mac_frames.pug
+++ b/views/calc_mac_frames.pug
@@ -4,9 +4,12 @@ block content
   h1 
     center.
       | Welcome to #{title}
-  font(size="3px")
+  font(color="#aaf", size="3px")
     p
       | #{help}
+  p
+    font(size="5px").
+      #{content}
   script(type="text/javascript")
     | var active_keys = #{activeKeys};
     | function localOnLoad() 
