--- a/views/list_mac_keys.pug
+++ b/views/list_mac_keys.pug
@@ -7,10 +7,23 @@ block content
   font(size="3px")
     p
       | #{help}
+  p
+    font(size="3px")
+      div
+        table(id="mac_prov_frame_tbl", width="100%")
+          tr
+            th(id="MacKey", style="background-color: #000")
+              | Name
+            th(id="IsActive", style="background-color: #000")
+              | Payload
+            th(id="IsMaster", style="background-color: #000")
+              | SHE Cmd Extracted
   script(type="text/javascript")
     | var active_keys = #{activeKeys};
+    | var mac_keys_tbl = #{macKeysTbl};
     | function localOnLoad() 
     | {
+    |   
     |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
     |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
     | }
