--- a/views/list_she_args_packets.pug
+++ b/views/list_she_args_packets.pug
@@ -7,10 +7,48 @@ block content
   font(size="3px")
     p
       | #{help}
+  p
+    font(size="3px")
+      div
+        table(id="she_cmd_args_tbl", width="100%")
+          tr
+            th(id="M1", style="background-color: #000")
+              | M1
+            th(id="M2", style="background-color: #000")
+              | M2
+            th(id="KeysExtracted", style="background-color: #000")
+              | Keys Extracted
   script(type="text/javascript")
     | var active_keys = #{activeKeys};
+    | var she_args_tbl = #{sheArgsTbl};
+    | var sheCmdArgsTbl = document.getElementById("she_cmd_args_tbl");
     | function localOnLoad() 
     | {
+    |   for (var i = she_args_tbl.length-1; i >= 0; i--)
+    |   {
+    |     var newRow = sheCmdArgsTbl.insertRow(1); /* Add  a row for this log file */
+    |     // Add a column for the SHE M1 cmd args of the log file
+    |     var newCell = newRow.insertCell(0);
+    |     // Create a link
+    |     var link = document.createElement("a");
+    |     var href = document.createAttribute("href");
+    |     href.value = (she_args_tbl[i]['keysExtracted'] ? '/list_she_args_packets/' : '/extract_she_args_packets/') + she_args_tbl[i]['id'];
+    |     link.setAttributeNode(href);
+    |     link.innerHTML = she_args_tbl[i]['m1'];
+    |     newCell.innerHTML = link.outerHTML;
+    |     // Add a column for the SHE M1 cmd args of the log file
+    |     var newCell = newRow.insertCell(1);
+    |     // Create a link
+    |     var link = document.createElement("a");
+    |     var href = document.createAttribute("href");
+    |     href.value = (she_args_tbl[i]['keysExtracted'] ? '/list_she_args_packets/' : '/extract_she_args_packets/') + she_args_tbl[i]['id'];
+    |     link.setAttributeNode(href);
+    |     link.innerHTML = she_args_tbl[i]['m2'];
+    |     newCell.innerHTML = link.outerHTML;
+    |     // Add a column for the KeysExtracted of the log file
+    |     newCell = newRow.insertCell(2);
+    |     newCell.innerHTML = '<input type="checkbox" onclick="this.checked=!this.checked;" readonly'+(she_args_tbl[i]['keysExtracted'] ? ' checked' : '')+'>&nbsp;</input>';
+    |   }
     |   document.getElementById('k_mac_ecu').value = active_keys['kMacEcu'];
     |   document.getElementById('k_master_ecu').value = active_keys['kMasterEcu'];
     | }
