Fixed help message presentation
Fixed alignment on right side and color of help msg

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,9 @@ block content
   h1 
     center
       | Welcome to #{title}
+  font(size="3px", color="#aaf")
+    p(align="right")
+      | #{help}
   p
     font(size="3px")
       | Select an entry from the side bar
