--- a/views/list_log_files.pug
+++ b/views/list_log_files.pug
@@ -4,8 +4,8 @@ block content
   h1 
     center
       | #{title}
-  font(size="3px")
-    p
+  font(size="3px", color="#aaf")
+    p(align="right")
       | #{help}
   p
     font(size="3px")
