--- a/views/calc_mac_frames.pug
+++ b/views/calc_mac_frames.pug
@@ -5,7 +5,7 @@ block content
     center.
       | Welcome to #{title}
   font(color="#aaf", size="3px")
-    p
+    p(align="right")
       | #{help}
   p
     font(size="5px").
