--- a/views/extract_mac_frames.pug
+++ b/views/extract_mac_frames.pug
@@ -8,8 +8,8 @@ block content
   h1 
     center
       | Welcome to #{title}
-  font(size="3px")
-    p
+  font(size="3px", color="#aaf")
+    p(align="right")
       | #{help}
   p
     div
