--- a/views/import_log_file.pug
+++ b/views/import_log_file.pug
@@ -4,8 +4,8 @@ block content
   h1 
     center
       | Welcome to #{title}
-  font(size="3px")
-    p
+  font(size="3px", color="#aaf")
+    p(align="right")
       | #{help}
     form(ref="logfile", id="logfile", method="post", action="/upload_log_file", encType="multipart/form-data")
       table(width="100%")
