--- a/views/unwrap_mac_keys.pug
+++ b/views/unwrap_mac_keys.pug
@@ -4,8 +4,8 @@ block content
   h1 
     center
       | Welcome to #{title}
-  font(size="3px")
-    p
+  font(size="3px", color="#aaf")
+    p(align="right")
       | #{help}
   script(type="text/javascript")
     | var active_keys = #{activeKeys};
