--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,12 @@ body {
 a {
   color: #00B7FF;
 }
+
+.div-scroll div.scroll {
+    background-color: #fff;
+    width: 1000px;
+    height: 400px;
+    overflow: auto;
+    text-align: left;
+    padding: 10px;
+}
